--- a/styles/login.css
+++ b/styles/login.css
@@ -1,1 +1,61 @@
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(135deg, #f5f5f5, #e4d9cc);
+}
+
+main {
+    display: flex; 
+    justify-content: space-between ; 
+}
+
+.container_login {
+    margin: 150px 250px 0 0;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    font-size: 38px;
+}
+
+input {
+    width: 50vh;
+    margin-bottom: 30px;
+    height: 6vh;
+    border: 1px solid black;
+    border-radius: 12px;
+    background-color: transparent;
+}
+.erro_login {
+    margin-bottom: 15px;
+}
+
+.container_login button {
+    background-color: #4f0f11;
+    width: 18vh;
+    height: 5vh;
+    border: none;
+    margin-bottom: 20px;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.container_login button:hover {
+    background-color: #581418;
+    border: 2px solid #f5f5f5;
+}
+
+main li {
+    color: black;
+    list-style: none;
+}
+
+main a {
+    color: #4f0f11;
+    text-decoration: underline;
+}
 
