--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,9 @@ p {
     font-size: 20px;
 }
 
+
+/* Seção 1 - O que é o violino? */
+
 .sobre_violino {
     display: flex;
     background: linear-gradient(135deg, #f5f5f5, #e4d9cc);
@@ -30,11 +33,86 @@ p {
     font-size: 40px;
 }
 
-.conteudo {
+.sv_conteudo {
     margin: 60px 0 0 100px;
 }
 
 .sobre_violino img {
     margin: 50px 70px 0 0;
+}
+
+/* Fim da seção 1 */
+
+
+/* Seção 2 - Por que aprender violino? */
+
+.aprender_violino {
+    display: flex;
+    background: linear-gradient(135deg, #f5f5f5, #e4d9cc);
+    flex-direction: column  ;
+    justify-content: flex-start;
+    align-items: center;
+    height: 600px;
+}
+
+.av_conteudo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.aprender_violino h1 {
+    font-size: 40px;
+}
+
+.beneficio {
+    display: flex;
+    flex-direction: column;
+    margin-right: 355px;
+}
+
+.beneficio1, .beneficio2, .beneficio3, .beneficio4 {
+    display: flex;  
+    align-items: center;
+    color: #2f913f;
+    font-size: 20px;
+}
+
+.beneficio img {
+    width: 30px;    
+    height: 30px;   
+}
+
+.desafio_aprender {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Fim da seção 2 */
+
+
+
+/* Seção 3 - Sobre o projeto */
+
+.sobre_projeto {
+    display: flex;
+    background: linear-gradient(135deg, #f5f5f5, #e4d9cc);
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 600px;
+}
+
+.sobre_projeto h1 {
+    font-size: 40px;
+}
+
+.sp_conteudo {
+    margin: 60px 0 0 100px;
+}
+
+.sobre_projeto img {
+    width: 600px; 
+    height: 500px;
 }
 
