--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-  main {
+main {
     display: flex;
     background: linear-gradient(135deg, #f5f5f5, #e4d9cc);
     justify-content: flex-end;
@@ -14,7 +14,7 @@
     font-size: 55px;
 }
 
-p {
+.titulo p {
     font-size: 20px;
 }
 
@@ -115,4 +115,115 @@ p {
     width: 600px; 
     height: 500px;
 }
+
+/* Fim da seção 3 */
+
+
+/* Seção 4 - Proppstas do projeto */
+
+.proposta_projeto {
+    display: flex;
+    background: linear-gradient(135deg, #f5f5f5, #e4d9cc);
+    justify-content: center;
+    align-items: flex-start;
+    height: 600px;
+}
+
+.proposta_projeto h1 {
+    font-size: 40px;
+}
+
+.pp_conteudo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container_proposta {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    width: 120vh;
+}
+
+.proposta1, .proposta2, .proposta3 {
+    background-color: black;
+    color: aliceblue;
+    width: 220px;
+    height: 330px;
+    border-radius: 12px;
+}
+
+/* Fim da seção 4 */
+
+
+/* Seção 5 - Perguntas */
+
+.pergunta_footer {
+    display: flex;
+    background: linear-gradient(135deg, #f5f5f5, #e4d9cc);
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: 500px;
+}
+
+.pf_conteudo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 50px 0 0 100px;
+}
+
+.pergunta_footer h1 {
+    font-size: 40px;
+}
+
+.container_pergunta {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.pergunta1, .pergunta2, .pergunta3 {
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+/* Footer */
+
+footer {
+    display: flex;
+    height: 200px;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #25090a;
+    color: white;
+}
+
+.rede_social {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+}
+
+.icones_social img {
+    margin-top: 7px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
