--- a/styles/navbar_footer.css
+++ b/styles/navbar_footer.css
@@ -6,6 +6,12 @@ body {
     background: linear-gradient(135deg, #f5f5f5, #e4d9cc);
 }
 
+header {
+    position: sticky;
+    position: sticky; 
+    top: 0;
+}
+
 .logotipo {
     width: 110px; 
     height: 110px; 
