--- a/web-data-vizz/public/css/styles/index.css
+++ b/web-data-vizz/public/css/styles/index.css
@@ -38,11 +38,11 @@ header {
 }
 
 .sv_conteudo {
-    margin: 60px 0 0 100px;
+    margin: 100px 60px 0 100px;
 }
 
 .sobre_violino img {
-    margin: 50px 70px 0 0;
+    margin: 70px 0 0 70px;
     border-radius: 22px;
 }
 
@@ -58,12 +58,14 @@ header {
     justify-content: flex-start;
     align-items: center;
     height: 600px;
+    margin-top: 40px;
 }
 
 .av_conteudo {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
 
 .aprender_violino h1 {
