--- a/web-data-vizz/public/css/styles/telaUSuario.css
+++ b/web-data-vizz/public/css/styles/telaUSuario.css
@@ -132,5 +132,193 @@ header p {
     background-color: gray;
 }
 
-/* Dashboard */
+/* Fim da Dashboard */
+
+/* Estudo*/
+
+.estudo {
+    margin: 120px 0 0 150px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_estudo {
+    width: 500px;
+    height: 580px;
+    background-color: #e9e9e9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 50px;
+    color: black;
+}
+
+.container_estudo h1 {
+    margin-top: 50px;
+    margin-bottom: 0;
+}
+
+.container_estudo input, select {
+    width: 80%;
+    height: 10%;
+    background: transparent;
+    border: 1px solid black;
+}
+
+.dtEstudo, .tempoEstudo, .dificuldade  {
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    font-size: 17px;
+}
+
+.dtEstudo input {
+    width: 400px;
+    height: 55px;
+    margin-top: 7px;
+}
+
+.tempoEstudo input {
+    width: 400px;
+    height: 55px;
+    margin-top: 7px;
+}
+
+.dificuldade select {
+    width: 400px;
+    height: 55px;
+    margin-top: 7px;
+}
+
+.container_estudo button {
+    width: 40%;
+    height: 7%;
+    background-color: #4f0f11;
+    border: 0;
+    margin-top: 50px;
+    color: #f9f3ed;
+    font-size: 17px;
+}
+
+.estudo span {
+    margin-left: 50px;
+    margin-top: 60px;
+}
+
+/* Fim do Estudo */
+
+/* Metas */
+
+.meta {
+    margin-left: 150px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_historico .tabela {
+    width: 1100px;
+    height: 300px;
+    background-color: #e9e9e9;
+}
+
+.container_historico h1 {
+    margin-bottom: 0;
+}
+
+.nova_meta {
+    align-self: flex-start;
+    margin: 120px 0 0 115px;
+    display: flex;
+    flex-direction: column;
+}
+
+.formulario_novaMeta {
+    display: flex;
+    flex-direction: row ;
+    font-size: 17px;
+}
+
+.formulario_novaMeta input {
+    width: 300px;
+    height: 40px;
+    margin-right: 40px;
+    background: transparent;
+    border: 1px solid black;
+}
+
+.nova_meta button {
+    width: 150px;
+    height: 35px;
+    margin: 40px 0 0 418px;
+    background-color: #4f0f11;
+    border: 0;
+    border-radius: 2px;
+    color: #f9f3ed;
+    font-size: 17px;
+}
+
+.nova_meta label {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Fim da Meta */
+
+
+/* Configurações */
+
+.configuracao {
+    margin-left: 150px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.topo {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.topo h1 {
+    margin-left: 100px;
+}
+
+.topo img {
+    width: 150px;
+    margin-top: 21px;
+    margin-right: 21px;
+}
+
+.configuracao label {
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+
+.configuracao input {
+    width: 1000px;
+    height:40px;
+    background: transparent;
+    border: 1px solid black;
+}
+
+.configuracao button {
+    width: 170px;
+    height: 35px;
+    margin-left: 100px;
+    margin-top: 20px;
+    background-color: #4f0f11;
+    border: 0;
+    border-radius: 2px;
+    color: #f9f3ed;
+    font-size: 17px;
+}
 
