--- a/web-data-vizz/public/css/telaUsuario.css
+++ b/web-data-vizz/public/css/telaUsuario.css
@@ -79,7 +79,7 @@ header p {
 
 .dashboard {
     margin: 60px 0 0 280px;
-    display: flex;
+    display: none;
     flex-direction: column;
 }
 
@@ -87,28 +87,39 @@ header p {
     display: flex;
 }
 
-.kpis .kpi1 {
+.kpis .kpi1, .kpi2, .kpi3 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     width: 200px;
     height: 200px;
     background-color: #e9e9e9;
     margin-right: 60px;
 }
 
-.kpis .kpi2 {
-    width: 200px;
-    height: 200px;
-    background-color: #e9e9e9;
-    margin-right: 60px;
+.kpis p {
+    font-size: 20px;
 }
 
-.kpis .kpi3 {
-    width: 200px;
-    height: 200px;
-    background-color: #e9e9e9;
-    margin-right: 60px;
+.kpis span {
+    font-size: 50px;
+    margin-top: 20px;
+    color: #6a2318;
+}
+
+.kpi4 span {
+    font-size: 40px;
+}
+
+#span_dtFinal {
+    margin-top: 25px;
+    font-size: 17px;
 }
 
 .kpis .kpi4 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     width: 350px;
     height: 200px;
     background-color: #e9e9e9;
@@ -138,7 +149,7 @@ header p {
 
 .estudo {
     margin: 120px 0 0 150px;
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -178,12 +189,14 @@ header p {
     width: 400px;
     height: 55px;
     margin-top: 7px;
+    color: black;
 }
 
 .tempoEstudo input {
     width: 400px;
     height: 55px;
     margin-top: 7px;
+    color: black;
 }
 
 .dificuldade select {
@@ -197,9 +210,15 @@ header p {
     height: 7%;
     background-color: #4f0f11;
     border: 0;
-    margin-top: 50px;
+    margin-top: 20px;
     color: #f9f3ed;
     font-size: 17px;
+}
+
+.erroCampo {
+    margin-top: 20px;
+    opacity: 0;
+    color: red; 
 }
 
 .estudo span {
@@ -332,18 +351,7 @@ header p {
     height:40px;
     background: transparent;
     border: 1px solid black;
-    margin-top: 5px;
-}
-
-.configuracao button {
-    width: 170px;
-    height: 35px;
-    margin-left: 100px;
-    margin-top: 20px;
-    background-color: #4f0f11;
-    border: 0;
-    border-radius: 2px;
-    color: #f9f3ed;
     font-size: 17px;
+    margin-top: 5px;
 }
 
