--- a/web-data-viz/public/css/cadastro.css
+++ b/web-data-viz/public/css/cadastro.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap');
+
+h1, h2, h3, .titulo {
+    font-family: 'Playfair Display', serif;
+}
+
+body, p, span, nav {
+    font-family: 'Inter', sans-serif;
+}
+
 body {
     background-image: url(fundo_cadastro.svg); 
     background-size: cover;
